support video icon from css

--- a/pubs.html
+++ b/pubs.html
@@ -133,7 +133,9 @@ aria-controls="abs+BIBTEXKEY+"
 extra="BIBTEXKEY">Abstract</a>
               </span>
               <span class="if doi"><a class="bibtexVar label label-default" href="+DOI+" role="button" extra="doi">DOI</a></span>
-              <span class="if video"><a class="bibtexVar label label-info" href="+VIDEO+" role="button" extra="video">Video</a></span>
+              <span class="if video"><a class="bibtexVar label label-info" href="+VIDEO+" role="button" extra="video">
+                <div class="icon"><div class="videoCam"></div></div>
+              </a></span>
             </div>
             <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
               <div>
