fix search for time series

--- a/pubs.html
+++ b/pubs.html
@@ -68,7 +68,7 @@
             <option value="machine translation|multilingual translation|NMT|SMT">Machine Translation</option>
             <option value="question answering|machine reading comprehension">Question
               Answering</option>
-            <option value="time series|time sequences|coevolving sequences">Time Series Analysis</option>
+            <option value="time series|time sequence|coevolving sequence|temporal model|dynamical system|ThermoCast">Time Series Analysis</option>
             <option value="image classification|object detection|image segmentation|instance segmentation|visual recognition|visual understanding|image retrieval|video retrieval|image captioning|video captioning">Visual Understanding</option>
           </select>
         </div>
