--- a/pubs.html
+++ b/pubs.html
@@ -79,22 +79,22 @@
             of the two terms)</span> </div>
         <span class="bibtex_search_stats badge">0</span>results
       </div>
-    <div class="bibtex_structure">
-      <div class="group year" extra="DESC number">
-        <ul>
-          <div class="templates"></div>
-        </ul>
-        <!-- div class="sort month" extra="DESC date">
-                      </div --> 
-      	<a href="#top" style="display: inline"><em>(Top
-            of the page)</em></a>
+      <div class="bibtex_structure">
+        <div class="group year" extra="DESC number">
+          <ul>
+            <div class="templates"></div>
+          </ul>
+          <!-- div class="sort month" extra="DESC date">
+                        </div --> 
+        	<a href="#top" style="display: inline"><em>(Top
+              of the page)</em></a>
+        </div>
       </div>
-    </div>
-    <div id="bibtex_display">
-      <div class="bibtex_template" style="display: none;">
-        
+      <div id="bibtex_display">
+        <div class="bibtex_template" style="display: none;">
           <li class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK">
-            <span class="if title"> <a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
+            <span class="if thumbnail"><img class="bibtexVar bibtexthumb" src="pubs/+THUMBNAIL+" align="right" extra="thumbnail"/></span>
+            <span class="if title"><a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span
                   class="title"></span></a>,</span>
             <div class="if author"><span class="author" conjunction=", and"><span class="first"></span> <span class="last"></span></span>.</div>
@@ -149,13 +149,11 @@ extra="BIBTEXKEY">Abstract</a>
                 <pre><span class="abstract"></span></pre>
               </div>
             </div>
-            <div style="display:none"> <span class="bibtextype"></span> </div>
-            <div style="display:none"> <span class="if topic"> <span class="topic"></span>
-              </span> </div>
+            <div style="display:none"> <span class="bibtextype"></span></div>
+            <div style="display:none"> <span class="if topic"> <span class="topic"></span></span></div>
           </li>
-        
+        </div>
       </div>
-    </div>
     </div>
     <!-- Latest compiled and minified JavaScript -->
     <script src="bootstrap.min.js"></script>
