fix counting error, remove empty entry

--- a/pubs.html
+++ b/pubs.html
@@ -91,8 +91,7 @@
         </div>
       </div>
       <div id="bibtex_display">
-        <div class="bibtex_template" style="display: none;">
-          <li class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK">
+        <div class="bibtex_template" style="display: none;"><li class="if BIBTEXTYPEKEY==ARTICLE || BIBTEXTYPEKEY==INPROCEEDINGS || BIBTEXTYPEKEY==MISC || BIBTEXTYPEKEY==PHDTHESIS || BIBTEXTYPEKEY==MASTERTHESIS || BIBTEXTYPEKEY==BACHELORSTHESIS || BIBTEXTYPEKEY==TECHREPORT || BIBTEXTYPEKEY==BOOK">
             <span class="if thumbnail"><img class="bibtexVar bibtexthumb" src="pubs/+THUMBNAIL+" align="right" extra="thumbnail"/></span>
             <span class="if title"><a class="bibtexVar" href="pubs/+BIBTEXKEY+.pdf"
                 extra="BIBTEXKEY"><span
@@ -151,8 +150,7 @@ extra="BIBTEXKEY">Abstract</a>
             </div>
             <div style="display:none"> <span class="bibtextype"></span></div>
             <div style="display:none"> <span class="if topic"> <span class="topic"></span></span></div>
-          </li>
-        </div>
+          </li></div>
       </div>
     </div>
     <!-- Latest compiled and minified JavaScript -->
