--- a/pubs.html
+++ b/pubs.html
@@ -63,7 +63,7 @@
             <option value="">Search Topic</option>
             <!-- Add topic values here -->
             <option value="dialog generation|sentence generation|text generation|headline generation|language generation|news generation|captioning">Natural Language Generation</option>
-            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model">Probabilistic
+            <option value="BLOG|bayesian|probabilsitic inference|probabilistic model|graphical model|Monte Carlo|Monte-Carlo|VAE|Metropolis-Hastings|Gibbs sampling|MCMC">Probabilistic
               Modelling</option>
             <option value="machine translation|multilingual translation|NMT|SMT">Machine Translation</option>
             <option value="question answering|machine reading comprehension">Question
