--- a/pubs.html
+++ b/pubs.html
@@ -7,7 +7,7 @@
     <!-- <link href="latofonts.css" rel="stylesheet" type="text/css" /> -->
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="style/style.css" rel="stylesheet" type="text/css" />
     <script src="jquery-3.4.1.min.js"></script>
     <script src="bibtex_js.js" type="text/javascript" charset="utf-8"></script>
   </head>
