--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="main col">
           <h3>News</h3>
           <ul>
-            <li><img src="images/new-icon.gif" style="height:1.2em" />1 paper
-              about faster object instance segmentation in images is accepted to
+            <li><img src="images/new-icon.gif" style="height:1.2em" /><a href="pubs/wang2020solov2.pdf">SOLOv2</a> is out!
+              One paper about faster object instance segmentation in images is accepted to
               NeurIPS 2020.</li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /> 5 papers
               accepted to EMNLP 2020! 3 in Long track and 2 in Findings.</li>
