adding AAAI papers

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <div class="main col">
           <h3>News</h3>
           <ul>
+            <li><img src="images/new-icon.gif" style="height:1.2em" />
+              Six papers are accepted to AAAI 2021, about end-to-end speech translation, knowledge graph completion, optimization, text generation. </li>
+            <li><img src="images/new-icon.gif" style="height:1.2em" /> One paper about application of text generation for search advertising. </li>
             <li><img src="images/new-icon.gif" style="height:1.2em" /><a href="pubs/wang2020solov2.pdf">SOLOv2</a> is out!
               One paper about faster object instance segmentation in images is accepted to
               NeurIPS 2020.</li>
