adding mlnlc.html

--- a/software.html
+++ b/software.html
@@ -18,6 +18,7 @@
         <li class="active"><a href="software.html">Software</a></li>
         <li><a href="talks.html">Talks</a></li>
         <li><a href="leili-bio.html">Bio</a></li>
+        <li><a href="mlnlc.html">MLNLC</a></li>
       </ul>
       <div class="row">
         <div class="main col">
