--- a/mlnlc.html
+++ b/mlnlc.html
@@ -124,6 +124,11 @@ new Vue({
         authors: ["李博涵", "李磊"],
         link: "https://mlnlc.github.io/blogs/nlp/2020/bert-flow/" // push后自动发布 https://github.com/mlnlc/mlnlc.github.io
       },
+      {
+        title: "LightSeq",
+        authors: ["王晓晖", "李磊"],
+        link: "https://translate.volcengine.cn/content/9316/201210/" // 官网 https://translate.volcengine.cn/contents 的页面
+      },
     ],
     // 搜索框
     searchForm: {
